staging/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: python-color-app
  name: python-color-app
  namespace: python-color-app-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-color-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: python-color-app
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/python-color-app-staging/flask-webapp-color:3
        name: python-color-app
        resources: {}
