staging/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: python-color-app
    app.kubernetes.io/instance: python-color-app-staging
  name: color-staging
  namespace: python-color-app-staging
spec:
  host: color-staging-python-color-app-staging.apps.ocp2.feesh.ch
  port:
    targetPort: 8080
  tls:
    termination: edge
  to:
    kind: Service
    name: python-color-app
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2022-07-03T04:33:47Z"
      status: "True"
      type: Admitted
    host: color-staging-python-color-app-staging.apps.ocp2.feesh.ch
    routerCanonicalHostname: router-default.apps.ocp2.feesh.ch
    routerName: default
    wildcardPolicy: None
